subdir('meson_deps/meson/sqlite3')
subdir('meson_deps/meson/deps/vt100utils')
subdir('meson_deps/meson/deps/c_stringfn')
subdir('meson_deps/meson/deps/parson')
subdir('meson_deps/meson/deps/log.h')
subdir('meson_deps/meson/deps/greatest')
subdir('meson_deps/meson/deps/cargs')
subdir('meson_deps/meson/deps/fs')
subdir('meson_deps/meson/deps/bytes')
subdir('meson_deps/meson/deps/c_string_buffer')
subdir('meson_deps/submodules')

