subdir('meson_deps/meson/deps/djbhash')
subdir('meson_deps/meson/deps/sdl2')
subdir('meson_deps/meson/deps/tiny-regex-c')
subdir('meson_deps/meson/deps/asprintf')
subdir('meson_deps/meson/deps/dbg')
subdir('meson_deps/meson/deps/c_vector')
subdir('meson_deps/meson/deps/chan')
subdir('meson_deps/meson/deps/murmurhash.c')
subdir('meson_deps/meson/deps/b64')
subdir('meson_deps/meson/deps/libbeaufort')
subdir('meson_deps/meson/deps/smaz')
subdir('meson_deps/meson/deps/c_eventemitter')
subdir('meson_deps/meson/deps/c_string_buffer')
subdir('meson_deps/meson/deps/c_fsio')
subdir('meson_deps/meson/deps/subprocess')
subdir('meson_deps/meson/deps/vt100utils')
subdir('meson_deps/meson/deps/c_stringfn')
subdir('meson_deps/meson/deps/parson')
subdir('meson_deps/meson/deps/log.h')
subdir('meson_deps/meson/deps/greatest')
subdir('meson_deps/meson/deps/cargs')
subdir('meson_deps/meson/deps/fs')
subdir('meson_deps/meson/deps/bytes')
subdir('meson_deps/meson/deps/timestamp')
subdir('meson_deps/submodules/c_ansi/ansi-codes')
#//subdir('meson_deps/submodules')

