subdir('c_deps/meson/deps/djbhash')
subdir('c_deps/meson/deps/sdl2')
subdir('c_deps/meson/deps/tiny-regex-c')
subdir('c_deps/meson/deps/asprintf')
subdir('c_deps/meson/deps/dbg')
subdir('c_deps/meson/deps/c_vector')
subdir('c_deps/meson/deps/chan')
subdir('c_deps/meson/deps/murmurhash.c')
subdir('c_deps/meson/deps/b64')
subdir('c_deps/meson/deps/libbeaufort')
subdir('c_deps/meson/deps/smaz')
subdir('c_deps/meson/deps/c_eventemitter')
subdir('c_deps/meson/deps/c_string_buffer')
subdir('c_deps/meson/deps/c_fsio')
subdir('c_deps/meson/deps/subprocess')
subdir('c_deps/meson/deps/vt100utils')
subdir('c_deps/meson/deps/c_stringfn')
subdir('c_deps/meson/deps/parson')
subdir('c_deps/meson/deps/log.h')
subdir('c_deps/meson/deps/c_greatest')
subdir('c_deps/meson/deps/cargs')
subdir('c_deps/meson/deps/fs')
subdir('c_deps/meson/deps/bytes')
subdir('c_deps/meson/deps/timestamp')
subdir('c_deps/submodules/c_ansi/ansi-codes')
#//subdir('c_deps/submodules')

